kubectl/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prod
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expressjs-black
  labels:
    app: expressjs-black
    version: v1
  namespace: prod
spec:
  selector:
    matchLabels:
      app: expressjs-black
      version: v1
  replicas: 3
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: expressjs-black
        version: v1
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: type
                operator: In
                values:
                - core
                - reserved
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            preference:
              matchExpressions:
              - key: ec2
                operator: In
                values:
                - spot
      containers:
      - name: expressjs-black
        image: bryanchua/sample-expressjs-microservice:latest
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: expressjs-red
  labels:
    app: expressjs-red
    version: v1
  namespace: prod
spec:
  selector:
    matchLabels:
      app: expressjs-red
      version: v1
  replicas: 3
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: expressjs-red
        version: v1
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: type
                operator: In
                values:
                - core
                - reserved
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            preference:
              matchExpressions:
              - key: ec2
                operator: In
                values:
                - spot
      containers:
      - name: expressjs-red
        image: bryanchua/sample-expressjs-microservice:latest
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: expressjs-gateway
  labels:
    app: expressjs-gateway
    version: v1
  namespace: prod
spec:
  selector:
    matchLabels:
      app: expressjs-gateway
  replicas: 3
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: expressjs-gateway
        version: v1
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: type
                operator: In
                values:
                - core
                - reserved
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            preference:
              matchExpressions:
              - key: ec2
                operator: In
                values:
                - spot
      containers:
      - name: expressjs-gateway
        image: bryanchua/sample-expressjs-gateway:latest
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
