kubectl/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: expressjs-black
  namespace: prod
  labels:
    app: expressjs-black
    version: v1
spec:
  selector:
    app: expressjs-black
    version: v1
  ports:
   -  port: 3000

---

apiVersion: v1
kind: Service
metadata:
  name: expressjs-red
  namespace: prod
  labels:
    app: expressjs-red
    version: v1
spec:
  selector:
    app: expressjs-red
    version: v1
  ports:
   -  port: 3000

---

apiVersion: v1
kind: Service
metadata:
  name: expressjs-gateway
  namespace: prod
  annotations:
    kubernetes.io/ingress.class: alb
  labels:
    app: expressjs-gateway
    version: v1
spec:
  selector:
    app: expressjs-gateway
    version: v1
  type: NodePort
  ports:
    - port: 80
      targetPort: 3001
      protocol: TCP
