kubectl/v2.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expressjs-red-v2
  labels:
    app: expressjs-red
    version: v2
  namespace: prod
spec:
  selector:
    matchLabels:
      app: expressjs-red
      version: v2
  replicas: 3
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: expressjs-red
        version: v2
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: type
                operator: In
                values:
                - core
                - reserved
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            preference:
              matchExpressions:
              - key: ec2
                operator: In
                values:
                - spot
      containers:
      - name: expressjs-red
        image: bryanchua/sample-expressjs-microservice:latest
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: expressjs-red-v2
  namespace: prod
  labels:
    app: expressjs-red
    version: v2
spec:
  selector:
    app: expressjs-red
    version: v2
  ports:
   -  port: 3000

---
