kubectl/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: expressjs-gateway
  namespace: prod
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: expressjs-gateway
              servicePort: 80
