kubectl/mesh.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: prod
  labels:
    mesh: webservice
    appmesh.k8s.aws/sidecarInjectorWebhook: enabled
---
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: expressjs-red-vs
  namespace: prod
spec:
  awsName: expressjs-red.prod.svc.cluster.local
  provider:
    virtualRouter:
      virtualRouterRef:
        name: expressjs-red-vr
---
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: expressjs-black-vs
  namespace: prod
spec:
  awsName: expressjs-black.prod.svc.cluster.local
  provider:
    virtualRouter:
      virtualRouterRef:
        name: expressjs-black-vr
